--- a/sheet.tex
+++ b/sheet.tex
@@ -84,6 +84,12 @@ Modern CPU compute 100M in 3s.
 
 \section{Math}
 
+TODO tables of $2^x$, $!x, x 1..13$
+
+TODO simple geometric formulas for volumes etc?
+
+TODO sin/cos
+
 \lstinputlisting[language=C++]{./lib/math.cpp}
 
 \subsection{Primes}
@@ -91,6 +97,8 @@ Modern CPU compute 100M in 3s.
 \lstinputlisting[language=C++]{./lib/primes.cpp}
 
 \subsection{Java BigInteger}
+
+TODO fib example
 
 \lstinputlisting[language=Java]{./lib/bigInteger.java}
 
