--- a/sheet.tex
+++ b/sheet.tex
@@ -120,15 +120,14 @@ $Cat(0) = 1$
 
 $Cat(n + 1) = \frac{(2n + 2)(2n + 1)}{(n + 2)(n + 1)} * Cat(n)$
 
+\subsection{Extended Euclid: Linear Diphantine Equation}
+\lstinputlisting[language=C++]{./lib/extended_euclid.cpp}
+
 \subsection{Cycle Finding}
 TODO
 
 \subsection{Game Theory}
 TODO
-
-\subsection{Linear Diphantine Equation}
-TODO
-
 
 \section{DP}
 
