Edit Distance. LCS. Fenwick Tree. Knuth Morris Prat string matching.

--- a/sheet.tex
+++ b/sheet.tex
@@ -137,11 +137,12 @@ $Cat(n) = \frac{2(2n - 1)}{n + 1} * Cat(n - 1)$
 \lstinputlisting[language=C++]{./lib/floydCycleFinding.cpp}
 
 \subsection{Game Theory}
-TODO
+TODO Nim Game
+TODO Minimax?
 
 \section{DP}
 
-\subsection{LIS $\BigO{n log n}$}
+\subsection{LIS $\BigO{n log k}$}
 \lstinputlisting[language=C++]{./lib/lis.cpp}
 
 
@@ -149,6 +150,9 @@ TODO
 
 \subsection{Union Find}
 \lstinputlisting[language=C++]{./lib/union_find.cpp}
+
+\subsection{Fenwick Tree}
+\lstinputlisting[language=C++]{./lib/fenwick.cpp}
 
 \subsection{Segment Tree}
 \lstinputlisting[language=C++]{./lib/segment_tree.cpp}
@@ -196,15 +200,15 @@ TODO
 \section{String}
 
 \subsection{Knuth-Morris-Pratt}
-TODO
+\lstinputlisting[language=C++]{./lib/kmp.cpp}
 
 \subsection{Edit Distance}
-TODO
+\lstinputlisting[language=C++]{./lib/edit_distance.cpp}
 
-\subsection{LCS}
-TODO
+\subsection{Longest Common Subsequence}
+\lstinputlisting[language=C++]{./lib/lcs.cpp}
 
-\subsection{Suffix Trie}
+\subsection{Suffix Array}
 TODO
 
 
