Suffix Array with LCS and LRS

--- a/sheet.tex
+++ b/sheet.tex
@@ -230,8 +230,7 @@ TODO Minimax?
 \lstinputlisting[language=C++]{./lib/lcs.cpp}
 
 \subsection{Suffix Array}
-TODO
-
+\lstinputlisting[language=C++]{./lib/suffix_array.cpp}
 
 \section{Geometry}
 
