--- a/sheet.tex
+++ b/sheet.tex
@@ -233,9 +233,14 @@ The Nim Game. Two players take turns to remove objects from distinct heaps. On e
 \subsection{Suffix Array}
 \lstinputlisting[language=C++]{./lib/suffix_array.cpp}
 
+
 \section{Geometry}
 
-TODO
+\subsection{Points and Lines}
+\lstinputlisting[language=C++]{./lib/points_lines.cpp}
+
+\subsection{Circles}
+\lstinputlisting[language=C++]{./lib/circles.cpp}
 
 \subsection{Convex Hull}
 
