Polygons and triangles.

--- a/sheet.tex
+++ b/sheet.tex
@@ -242,9 +242,11 @@ The Nim Game. Two players take turns to remove objects from distinct heaps. On e
 \subsection{Circles}
 \lstinputlisting[language=C++]{./lib/circles.cpp}
 
-\subsection{Convex Hull}
+\subsection{Triangles}
+\lstinputlisting[language=C++]{./lib/triangles.cpp}
 
-TODO
+\subsection{Polygons}
+\lstinputlisting[language=C++]{./lib/polygon.cpp}
 
 
 \end{document}
