Steal Josephus from tcr. Otherwise most is here?

--- a/sheet.tex
+++ b/sheet.tex
@@ -228,7 +228,13 @@ $Cat(n) = \frac{2(2n - 1)}{n + 1} * Cat(n - 1)$
 
 \subsection{Game Theory}
 
-The Nim Game. Two players take turns to remove objects from distinct heaps. On each turn, a player must remove at least one object and may remove any number of objects, but only from the same heap. For the starting player to win, $n_1 \text{\textasciicircum{}} ... \text{\textasciicircum{}} n_k \neq 0$. (bitwise xor)
+\subsubsection{Nim Game}
+
+Two players take turns to remove objects from distinct heaps. On each turn, a player must remove at least one object and may remove any number of objects, but only from the same heap. For the starting player to win, $n_1 \text{\textasciicircum{}} ... \text{\textasciicircum{}} n_k \neq 0$. (bitwise xor)
+
+\subsubsection{Josephus}
+\lstinputlisting[language=C++]{./lib/josephus.cpp}
+
 
 \subsection{Java BigInteger}
 
