Add normal distibution and some trigonometry

--- a/sheet.tex
+++ b/sheet.tex
@@ -11,6 +11,7 @@
 \usepackage{color}
 \usepackage{multicol}
 \usepackage{fancyhdr}
+\usepackage{graphicx}
 \newcommand{\BigO}[1]{\ensuremath{\operatorname{O}\bigl(#1\bigr)}}
 \setlength{\tabcolsep}{0mm}
 
@@ -170,6 +171,31 @@ Modern CPU compute 100M in 3s.
                &= 1 - 2 \sin^2 \theta \\
                &= \frac{1 - \tan^2 \theta} {1 + \tan^2 \theta}
 \end{align*}
+
+\subsection{Trigonometry}
+
+\includegraphics[scale=0.5]{Triangle_with_notations_2}
+
+\[
+ c^2 = a^2 + b^2 - 2ab\cos\gamma\,
+\]
+\[
+ \frac{a}{\sin A} \,=\, \frac{b}{\sin B} \,=\, \frac{c}{\sin C} \,=\, D \!
+\]
+
+
+\subsection{Normal distribution}
+\[
+  f(x) = \frac{1}{\sigma\sqrt{2\pi}} e^{ -\frac{(x-\mu)^2}{2\sigma^2} }.
+\]
+
+\[
+ \Phi(x)\; = \;\frac{1}{\sqrt{2\pi}} \int_{-\infty}^x e^{-t^2/2} \, dt
+\]
+
+\[
+  F(x)\;=\;\Phi\left(\frac{x-\mu}{\sigma}\right)\
+\]
 
 \subsection{Factorial}
 
